# OpenReach

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Install OpenReach.bat  LICENSE  README.md  Start OpenReach.bat  pyproject.toml  requirements.txt
installer/: Install-OpenReach-Standalone.bat  Install-OpenReach.bat  setup.ps1
openreach/: __init__.py  __main__.py  cli.py  config.py  launcher.py
openreach/agent/: __init__.py  engine.py  tools.py
openreach/browser/: __init__.py  base.py  instagram.py  session.py
openreach/data/: __init__.py  cormass_api.py  csv_import.py  models.py  store.py
openreach/llm/: __init__.py  client.py  prompts.py
openreach/ui/: __init__.py  app.py
